# IntelligenceInterface

./: .gitignore  CLAUDE_TEMPLATE.md  README.md  pyproject.toml
benchmarks/: runner.py
benchmarks/baselines/: current.json
benchmarks/queries/: find-known-1.yaml  find-known-2.yaml  find-known-3.yaml  find-unknown-1.yaml  find-unknown-2.yaml  modify-1.yaml  modify-2.yaml  understand-1.yaml  understand-2.yaml  understand-3.yaml
docs/: PRD.md  TRD.md
docs/prompts/: implement-write-commands.md
docs/superpowers/plans/: 2026-05-18-phase1-core-loop.md  2026-05-18-phase2-jedi-resolver.md  2026-05-18-phase3-remaining-commands.md  2026-05-20-multi-language-support.md  2026-05-22-graph-persistence.md  2026-05-24-architecture-optimization.md
src/ii_structure/: cli.py  graph.py  help_content.yaml  index.py  lsp_client.py  migrations.py  output.py  parser.py  resolver.py  root.py
src/ii_structure/backends/: base.py  (+4 more)
tests/: conftest.py  test_benchmark.py  test_cli.py  test_edge_extraction.py  test_go_integration.py  test_graph.py  test_index.py  test_lsp_client.py  test_lsp_integration.py  test_migrations.py  test_output.py  test_parser.py  test_resolver.py  test_root.py  test_ts_integration.py
tests/test_backends/: test_golang.py  test_typescript.py
tests/test_commands/: test_blast_radius.py  test_body.py  test_content_hash.py  test_dead_code.py  test_files.py  test_help.py  test_imports.py  test_insert_symbol.py  test_locate.py  test_outline.py  test_overview.py  test_replace_body.py  test_search.py  test_test_coverage.py  test_usages.py  test_write_edge_cases.py
(+29 files in other folders)
