[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ii-structure"
version = "0.1.0"
description = "Structural code navigation CLI for LLM agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pathspec>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ii-structure = "ii_structure.cli:main"
